--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .gradle
 build/
-sandbox/out/
+out/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -14,4 +14,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 java_pft/.idea/workspace.xml
-sandbox/out/
+
