--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,4 +8,5 @@ dependencies {
     implementation 'org.testng:testng:7.5'
     implementation 'org.seleniumhq.selenium:selenium-java:4.4.0'
     implementation 'org.slf4j:slf4j-simple:1.6.1'
+    implementation 'org.hamcrest:hamcrest:2.2'
 }
