--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -10,4 +10,6 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.6.1'
     implementation 'org.hamcrest:hamcrest:2.2'
     implementation 'com.beust:jcommander:1.82'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.19'
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
