--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.4.0'
     implementation 'org.slf4j:slf4j-simple:1.6.1'
     implementation 'org.hamcrest:hamcrest:2.2'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
 }
 
 test {
