--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -10,6 +10,10 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.6.1'
     implementation 'org.hamcrest:hamcrest:2.2'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+    implementation 'commons-net:commons-net:3.7.2'
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
 }
 
 test {
