--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.10'
     implementation 'org.subethamail:subethasmtp:3.1.7'
     implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
+    implementation 'org.hibernate:hibernate-core:5.6.12.Final'
+    implementation 'mysql:mysql-connector-java:8.0.30'
 }
 
 test {
