--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -13,3 +13,5 @@ mailserver.host = localhost
 mailserver.port = 4555
 mailserver.adminlogin = root
 mailserver.adminpassword = root
+
+mantis.connectPort = http://localhost/mantisbt-1.3.20/api/soap/mantisconnect.php
