--- a/soap-sample/build.gradle
+++ b/soap-sample/build.gradle
@@ -8,6 +8,7 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.5'
     implementation 'org.slf4j:slf4j-simple:1.6.1'
+    implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 }
 
 buildscript{
