--- a/github-sample/build.gradle
+++ b/github-sample/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "ru.stqa.pft.sandbox.MyFirstProgram"
+
 
 repositories {
     mavenCentral()
@@ -9,8 +8,6 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.5'
     implementation 'org.slf4j:slf4j-simple:1.6.1'
+    implementation 'com.jcabi:jcabi-github:1.3.2'
 }
 
-test {
-    useTestNG()
-}
